# HetaRAG

./: LICENSE  README.md  pyproject.toml
docker/: README.md  docker-compose.yml
scripts/: backend.sh  pdf_mineru_to_milvus.sh
scripts/pdf_mineru_to_milvus/: get_info_clean_invalid_files.py  get_minerU_clean_invalid_files.py  get_vector_to_pkl.py  pkl_instert_milvus.py
source/: advanced_usage.rst  basic_usage.rst  conf.py  configuration.rst  database_Installation.rst  index.rst  installation.rst  quickstart.rst
source/_static/: neo4j_data.csv
source/components/: data_parser.rst  data_processor.rst  databases.rst  deepsearch.rst  deepwriter.rst  knowledge_graph.rst
source/examples/: backend.rst  basic_rag.rst  deepsearch.rst  knowledge_graph.rst  rerank.rst
source/retrieve/: data.rst  pipeline.rst  rank.rst
src/backend/: data_search_services.py  deepsearch_services.py  deepwriter_services.py
src/config/: DatabaseConfigREADME.md  KGConfigREADME.md  LLMConfigREADME.md  api_config.py  config.ini  db_config.py
src/data_parser/: base_parser.py  docling_parsed_reports_merging.py  docling_pdf_parser.py  document.py  fitz_parser.py  mineru_parser.py  mineru_pdf_parser.py  pure_pdf_docling_parser.py
src/database/: db_connection.py
src/deepsearch/: agent.py  multi_hop.py  multi_hop_qa.py  prompts.py  qa_evaluate.py
src/deepwriter/: __init__.py  pipeline.py
src/query_rewrite/: __init__.py  prompts.py  query_rewriter.py
src/rerank/: deploy.sh  model_setup.py  reranker.py
src/utils/: api_llm_requests.py  common_utils.py  file_utils.py  logging_utils.py  query2vec.py
tests/chunk_test/: test_chunk_reports.py  (+1 more)
(+108 files in other folders)
