[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[project]
name = "hrag"
version = "0.1"
description = "A custom package for HRAG project"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

dependencies = [
    "torch==2.6.0",
    "transformers>=4.51.1,<4.53",
    "vllm>=0.8.5",
    "ollama>=0.4.7",

    "magic-pdf==1.3.12",
    "matplotlib>=3.10,<4",
    "ultralytics>=8.3.48,<9",  
    "doclayout_yolo==0.0.2b1",
    "dill>=0.3.8,<1", 
    "rapid_table>=1.0.5,<2.0.0", 
    "PyYAML>=6.0.2,<7", 
    "ftfy>=6.3.1,<7", 
    "openai>=1.70.0,<2",  
    "shapely>=2.0.7,<3",  
    "pyclipper>=1.3.0,<2",  
    "omegaconf>=2.3.0,<3",  

    "docling==2.39.0",
    "jieba",
    "spacy",

    "elasticsearch==8.17.1",
    "elasticsearch_dsl==8.17.1",
    "neo4j==5.28.1",
    "py2neo==2021.2.4",
    "pymilvus==2.5.8",
    "PyMySQL==1.1.1",
    "faiss-cpu",
    "pyahocorasick",
    "tenacity",
    "tabulate",

    "langchain",
    "langchain-ollama",
    "langchain-community",
    "langchain-experimental",
    
    "rank_bm25",
    "qwen_agent",
    "crawl4ai",
    "qwen-vl-utils",
    "FlagEmbedding>=1.1.2",
    "flashrank>=0.1.4",
    
    "umap-learn",
    "hnswlib",
    "xxhash",
    "nano-vectordb",
    "graspologic",
    "future",
    "pyprojroot",
    "colorama",
    "json-repair",

]

[project.urls]
homepage = "https://github.com/HetaTeam/hrag/blob/main/README.md"
repository = "https://github.com/HetaTeam/hrag"

[tool.hatch.build.targets.wheel]
packages = ["."]